[gd_scene load_steps=2 format=3 uid="uid://save_load_ui"]

[ext_resource type="Script" path="res://scripts/ui/save_load_ui.gd" id="1_script"]

[node name="SaveLoadUI" type="CanvasLayer"]
layer = 20
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="MainPanel" type="PanelContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -220.0
offset_right = 300.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="MainPanel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Header" type="HBoxContainer" parent="MainPanel/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="MainPanel/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.9, 0.85, 0.6, 1)
theme_override_font_sizes/font_size = 22
text = "ðŸ’¾ Salvar Jogo"

[node name="Separator" type="HSeparator" parent="MainPanel/VBox"]
layout_mode = 2

[node name="SlotsPanel" type="PanelContainer" parent="MainPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MainPanel/VBox/SlotsPanel"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="Slots" type="VBoxContainer" parent="MainPanel/VBox/SlotsPanel"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Footer" type="HBoxContainer" parent="MainPanel/VBox"]
layout_mode = 2
alignment = 2

[node name="HelpText" type="Label" parent="MainPanel/VBox/Footer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.5, 0.5, 0.6, 1)
theme_override_font_sizes/font_size = 11
text = "O jogo salva automaticamente a cada minuto"

[node name="CloseButton" type="Button" parent="MainPanel/VBox/Footer"]
layout_mode = 2
text = "Fechar [ESC]"

[node name="ConfirmPanel" type="PanelContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -80.0
offset_right = 200.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="ConfirmPanel"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Text" type="Label" parent="ConfirmPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.95, 1)
theme_override_font_sizes/font_size = 15
text = "Tem certeza?"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Buttons" type="HBoxContainer" parent="ConfirmPanel/VBox"]
layout_mode = 2
alignment = 1

[node name="Yes" type="Button" parent="ConfirmPanel/VBox/Buttons"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "Sim"

[node name="No" type="Button" parent="ConfirmPanel/VBox/Buttons"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "NÃ£o"

[node name="NotificationLabel" type="Label" parent="."]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -60.0
offset_right = 150.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.4, 1, 0.5, 1)
theme_override_font_sizes/font_size = 18
text = "Jogo salvo com sucesso!"
horizontal_alignment = 1
